--- a/productManagementApp/src/main/resources/application.properties
+++ b/productManagementApp/src/main/resources/application.properties
@@ -6,9 +6,22 @@ spring.application.name=productManagementApp
 
 
 
+# ===============================
+# \uD83D\uDCBE DATABASE CONFIG
+# ===============================
+
+spring.datasource.url=jdbc:postgresql://ep-gentle-star-a5rj4h98-pooler.us-east-2.aws.neon.tech:5432/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_ioCJx39jaeqN
+
+# PostgreSQL-specific JDBC driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/prodDb
-spring.datasource.username=root
-spring.datasource.password=kiit
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.connection-timeout=30000
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
